--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.1.6",
     "@types/react": "~18.2.45",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "~5.3.3"
   },
   "private": true
