--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,22 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# vs-code
+.vscode
+.vscode/
+
+# intellij
+.idea
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
