--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
-    "expo": "~51.0.39",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-svg": "^15.9.0"
+    "expo": "~52.0.18",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.1.6",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "react-native-svg-transformer": "^1.5.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
