--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
-    "expo": "~52.0.18",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^52.0.25",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-svg": "15.8.0"
   },
   "devDependencies": {
